fix: input color overflow

--- a/glass-v1-anim.css
+++ b/glass-v1-anim.css
@@ -2562,6 +2562,9 @@ body {
 	color: var(--color-text-primary);
 	opacity: 0.7;
 }
+#menuWindow input[type='color'] {
+	overflow: hidden;
+}
 #itemSearch{
 	margin-bottom: 0;
 }
